@@ -156,6 +156,12 @@ available.
 nb: $MIRRORLIST is a special variable which gives the default URL for the
 current distribution/arch. $MIRRORLIST is the default mirrorlist.
 
+=item B<--zeroconf>
+
+Find a media repository for the current distribution using zeroconf (DNS-SD).
+It can be used together with B<--distrib> or by specifying a media name and a
+path to the media directory, relative to the repository root.
+
 =item B<--distrib>
 
 Retrieve a set of media from a distribution. Typically, the URL provided
