@@ -1,0 +1,16 @@
+<?xml version="1.0" standalone='no'?><!--*-nxml-*-->
+<!DOCTYPE service-group SYSTEM "avahi-service.dtd">
+
+<service-group>
+  <name replace-wildcards="yes">Mandriva urpmi repository on %h (HTTP)</name>
+
+  <service>
+    <type>_mdv_urpmi._tcp</type>
+    <subtype>_http._sub._mdv_urpmi._tcp</subtype>
+    <host-name>distro.local</host-name>
+    <port>80</port>
+    <txt-record>protocol=http</txt-record>
+    <txt-record>path=/dis</txt-record>
+  </service>
+
+</service-group>
