@@ -1,3 +1,5 @@
+- add --zeroconf support in urpmi.addmedia
+
 Version 6.37 - 28 May 2010
 - urpmq
   o fix listing of groups when listing all packages (also fixes #59321)
